[package]
name = "thin-shunting"
version = "0.0.7"
edition = "2018"
license = "MIT"
authors = ["Rodolfo Granata <warlock.cc@gmail.com>", "Brooks J Rady <b.j.rady@gmail.com>"]
description = "A library for evaluating math expressions"
repository = "https://github.com/rodolf0/tox/tree/master/shunting"
readme = "README.md"
keywords = ["shunting", "math", "parser", "expression", "eval"]
categories = ["parsing", "algorithms"]

[dependencies]
rand = "0.7.3"
